--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Setup logging for better tracking of progress\n",
-    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')"
+    "logging.basicConfig(filename='logfile.log',level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,32 +87,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)  # Forward fill for missing values\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='bfill', inplace=True)  # Backward fill if any remain\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)  # Forward fill for missing values\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='bfill', inplace=True)  # Backward fill if any remain\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)  # Forward fill for missing values\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='bfill', inplace=True)  # Backward fill if any remain\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)  # Forward fill for missing values\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='bfill', inplace=True)  # Backward fill if any remain\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:10: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='ffill', inplace=True)  # Forward fill for missing values\n",
-      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_21692\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\elbet\\AppData\\Local\\Temp\\ipykernel_38368\\2211415210.py:11: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df.fillna(method='bfill', inplace=True)  # Backward fill if any remain\n"
      ]
     }
