fastapi crud application

--- a/notebooks/object_detection_yolo.ipynb
+++ b/notebooks/object_detection_yolo.ipynb
@@ -34,7 +34,8 @@
    ],
    "source": [
     "import torch\n",
-    "print(torch.cuda.is_available())\n"
+    "print(torch.cuda.is_available()) \n",
+    "#\n"
    ]
   },
   {
