adding markdowns and revisiting code

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import required Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -14,13 +21,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup logging for better tracking of progress"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup logging for better tracking of progress\n",
     "logging.basicConfig(filename='logfile.log',level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #### Convert the scrapped JSON files to DataFrame"
    ]
   },
   {
@@ -29,7 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to convert JSON to DataFrame\n",
     "def json_to_dataframe(json_path):\n",
     "    \"\"\"Converts a JSON file to a pandas DataFrame.\"\"\"\n",
     "    try:\n",
@@ -38,7 +57,14 @@
     "        return df\n",
     "    except ValueError as e:\n",
     "        logging.error(f\"Error reading {json_path}: {e}\")\n",
-    "        return pd.DataFrame()  # Return an empty DataFrame if there's an error\n"
+    "        return pd.DataFrame()  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean the DataFrame by handling missing values, duplicates, etc."
    ]
   },
   {
@@ -47,25 +73,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to clean the DataFrame\n",
     "def clean_dataframe(df):\n",
-    "    \"\"\"Cleans the DataFrame by handling missing values, duplicates, etc.\"\"\"\n",
+    "    \n",
     "    if df.empty:\n",
     "        logging.warning(\"DataFrame is empty. Skipping cleaning.\")\n",
     "        return df\n",
     "    \n",
-    "    # Example cleaning steps (customize as needed):\n",
     "    df.drop_duplicates(inplace=True)\n",
     "    df.fillna(method='ffill', inplace=True)  # Forward fill for missing values\n",
     "    df.fillna(method='bfill', inplace=True)  # Backward fill if any remain\n",
     "    \n",
-    "    # Convert date columns to datetime if present\n",
+    "    # Convert date columns to datetime\n",
     "    for col in df.columns:\n",
     "        if 'date' in col.lower():\n",
     "            df[col] = pd.to_datetime(df[col], errors='coerce')\n",
     "\n",
     "    logging.info(\"Data cleaning completed.\")\n",
-    "    return df\n"
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the cleaned data and store in a database"
    ]
   },
   {
@@ -84,6 +115,13 @@
     "    engine = create_engine(database_url)\n",
     "    df.to_sql(table_name, engine, if_exists='replace', index=False)\n",
     "    logging.info(f\"Data stored in the '{table_name}' table.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Main function to process all JSON files "
    ]
   },
   {
@@ -119,7 +157,7 @@
     }
    ],
    "source": [
-    "# Main function to process all JSON files in a directory\n",
+    "\n",
     "def process_all_json_files(input_folder, output_folder, database_url=None):\n",
     "    if not os.path.exists(output_folder):\n",
     "        os.makedirs(output_folder)\n",
@@ -161,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preprocessing Images"
+    "### Image data Preprocessing"
    ]
   },
   {
