retrain using augmented data

--- a/notebooks/object_detection_yolo.ipynb
+++ b/notebooks/object_detection_yolo.ipynb
@@ -2,26 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
+    "import os\n",
+    "import cv2\n",
     "import torch\n",
     "import logging\n",
-    "from pathlib import Path\n",
-    "import cv2\n",
-    "import pandas as pd\n",
-    "import os\n",
     "import subprocess\n",
-    "\n",
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
     "logging.basicConfig(filename='process.log', level=logging.INFO,\n",
     "                    format='%(asctime)s - %(levelname)s - %(message)s')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +130,8 @@
     "    logging.info(\"YOLOv5 training script started.\")\n",
     "    \n",
     "    # Define directories for training data (images and labels)\n",
-    "    train_data_dir = Path(r'C:/Users/elbet/OneDrive/Desktop/Ten/week-7/github/Building-a-data-warehouse/medical_business_data/train/images')\n",
-    "    train_labels_dir = Path(r'C:/Users/elbet/OneDrive/Desktop/Ten/week-7/github/Building-a-data-warehouse/medical_business_data/train/labels')\n",
+    "    train_data_dir = Path(r'C:/Users/elbet/OneDrive/Desktop/Ten/week-7/github/Building-a-data-warehouse/medical_business_data/augmented_data/images')\n",
+    "    train_labels_dir = Path(r'C:/Users/elbet/OneDrive/Desktop/Ten/week-7/github/Building-a-data-warehouse/medical_business_data/augmented_data/labels')\n",
     "    \n",
     "    # Validate directories\n",
     "    validate_directories(train_data_dir, train_labels_dir)\n",
@@ -176,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "telegram_scraper",
+   "display_name": "elbetel",
    "language": "python",
    "name": "python3"
   },
